# Artificial_Intelligence_laboratory_work_2

./: README.md  environment.yml  pre-commit-config.yaml  pyproject.toml  requirements.txt
examples/: search_in_width.py
individual/: Australia_search_in_width.py  islands.py  labyrinth.py  pitchers.py
src/: example_bfs.py  islands.py  labyrinth.py  pitchers.py
